# verus-express

./: .env.example  .eslintrc.js  .gitignore  .prettierrc  AGENTS.md  ENVIRONMENT.md  eslint.config.js  package.json  rust-toolchain.toml  tsconfig.json  vite.config.js
.github/workflows/: release.yml
docs/: index.md  ui-component-matrix.md
docs/architecture/: index.md  verus-identity-signing-rust.md
docs/context-packs/: identity-guard.md  index.md  send-flow.md  ui-i18n.md
docs/plans/: desktop-transfer-wizard.md  index.md
docs/plans/active/: _template.md  eth-erc20-bridge-backend-surface.md  eth-erc20-desktop-core.md  security-hardening-core-wallet.md
docs/plans/done/: README.md  fiat-rates-coinpaprika-pbaas.md  verusid-guard-entry-signed-out.md  wallet-overview-redesign-demo-fallback.md
docs/product-specs/: identity-guard-signed-out-flow.md  index.md  settings-scope.md  verus-pbaas-core-parity-fixtures.json  verus-pbaas-core-parity-matrix.md
docs/references/: eth-erc20-runtime-config.md  index.md  valu-coin-catalog-parity.md  verus-coin-catalog-parity.md  verus-identity-rust-parity.md
scripts/: bootstrap-zcash-params.sh  check-valu-coin-catalog.mjs  check-verus-coin-catalog.mjs  check-zcash-params.sh  docs-check.mjs  sync-valu-coin-catalog.mjs  sync-verus-coin-catalog.mjs  wipe-dlight.sh  wipe-wallets.sh
src/: AGENTS.md  app.css  app.d.ts  app.html
src-tauri/: AGENTS.md  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/permissions/autogenerated/: add_coin_definition.toml  add_pbaas_currency.toml  begin_guard_session.toml  create_wallet.toml  delete_address_book_contact.toml  discover_linkable_identities.toml  end_guard_session.toml  estimate_bridge_conversion.toml  estimate_bridge_export_fee.toml  generate_mnemonic.toml  get_active_assets.toml  get_active_wallet.toml  get_addresses.toml  get_balances.toml  get_bridge_capabilities.toml  get_bridge_conversion_paths.toml  get_coin_registry.toml  get_coin_scopes.toml  get_dlight_prover_status.toml  get_dlight_runtime_status.toml  get_dlight_seed_status.toml  get_identity_details.toml  get_linked_identities.toml  get_mnemonic_wordlist.toml  get_session_timeout_minutes.toml  get_transaction_history.toml  get_transaction_history_page.toml  get_wallet_recovery_secrets.toml  get_watched_vrpc_addresses.toml  import_wallet_text.toml  is_unlocked.toml  link_identity.toml  list_address_book_contacts.toml  list_wallets.toml  lock_wallet.toml  lookup_guard_target_identity.toml  mark_address_book_endpoint_used.toml  preflight_bridge_transfer.toml  preflight_guard_identity_update.toml  preflight_identity_update.toml  (+18 more)
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: address_book.rs  bridge_transfer.rs  clipboard.rs  coins.rs  guard.rs  identity.rs  mod.rs  transaction.rs  vrpc_transfer.rs  wallet.rs
src-tauri/src/core/: mod.rs  runtime_config.rs
src-tauri/src/core/address_book/: manager.rs
src-tauri/src/core/auth/: guard_session.rs  mod.rs  session.rs  stronghold_store.rs
src-tauri/src/core/channels/: dlight_private.rs  mod.rs  store.rs
src-tauri/src/core/channels/btc/: balance.rs  mod.rs  preflight.rs  provider.rs  send.rs  transactions.rs
src-tauri/src/core/channels/dlight_private/: destination.rs  preflight.rs  reader.rs  recipient_resolution.rs  runtime.rs  send.rs  spend_db.rs  spend_engine.rs  spend_keys.rs  spend_params.rs  spend_sync.rs  store.rs  synchronizer.rs
src-tauri/src/core/channels/eth/: balance.rs  config.rs  mod.rs  preflight.rs  provider.rs  send.rs  transactions.rs
src-tauri/src/core/channels/eth/bridge/: delegator.rs  fees.rs  mod.rs  paths.rs  preflight.rs  reserve_transfer.rs  send.rs  token_mapping.rs
src-tauri/src/core/channels/vrpc/: balance.rs  mod.rs  preflight.rs  provider.rs  send.rs  transactions.rs  transfer.rs
src-tauri/src/core/channels/vrpc/identity/: extract.rs  mod.rs  preflight.rs  send.rs  validate.rs
src-tauri/src/core/channels/vrpc/identity/fixtures/: verus_identity_vectors.json
src-tauri/src/core/channels/vrpc/identity/verus_tx/: codec.rs  mod.rs  model.rs  script.rs  sighash.rs  smart_sig.rs
src-tauri/src/core/coins/: mod.rs  registry.rs  types.rs
src-tauri/src/core/crypto/: eth_keys.rs  key_derivation_v1.rs  mod.rs  wif_encoding.rs
src-tauri/src/core/rates/: coinpaprika.rs  ecb.rs  mod.rs  pbaas.rs
src-tauri/src/core/updates/: engine.rs  events.rs  mod.rs  params.rs
src-tauri/src/core/wallet/: manager.rs  mod.rs
src-tauri/src/types/: address_book.rs  bridge.rs  errors.rs  guard.rs  identity.rs  mod.rs  transaction.rs  vrpc_transfer.rs  wallet.rs
src/lib/address-book/: utils.ts
src/lib/coins/: presentation.ts  supportedAssets.ts  valuCoinCatalog.generated.json  valuCoinCatalog.meta.json  verusCoinCatalog.generated.json  verusCoinCatalog.meta.json
src/lib/components/common/: CommunityHangoutButton.svelte  HelpDrawerLink.svelte  HelpLink.svelte  HelpSidebar.svelte  InlineTextActionButton.svelte  (+4 more)
src/lib/constants/: walletColors.ts
src/lib/i18n/: index.ts
src/lib/machines/: txMachine.ts  walletMachine.ts
src/lib/security/: sessionTimeout.ts
src/lib/services/: addressBookService.ts  bridgeTransferService.ts  coinsService.ts  eventBridge.ts  guardService.ts  identityLinkService.ts  identityService.ts  txService.ts  vrpcTransferService.ts  walletService.ts
src/lib/stores/: addAssetCatalog.ts  addressBook.ts  assetVisibility.ts  balances.ts  coinScopes.ts  coins.ts  network.ts  rates.ts  settings.ts  transactions.ts  walletBootstrap.ts  walletChannels.ts  walletErrors.ts
src/lib/transfer/: convertTargetOptions.ts  recipientAddressValidation.ts  transferWizardCopy.ts
src/lib/types/: addressBook.ts  wallet.ts
src/lib/utils/: appInfo.ts  channelId.ts  externalLinks.ts  fiatDisplay.ts  helpContent.ts  identityDisplay.ts  localeOptions.ts  privateVerusWordmark.ts  walletErrors.ts  walletOverview.ts  walletOverviewDemo.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/wallet/: +page.svelte
(+95 files in other folders)
