[package]
name = "lite-wallet"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lite_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"  # IOTA Stronghold for secure key storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = "2.0"               # BIP39 mnemonic phrase generation
rand = "0.8"                # Cryptographically secure random number generation
hex = "0.4"                 # Hex encoding/decoding
bitcoin = "0.31"            # Bitcoin key derivation
k256 = "0.13"               # Ethereum secp256k1 cryptography
zeroize = "1.6"             # Secure memory clearing
sha2 = "0.10"               # SHA-256 hashing for passwords
thiserror = "1.0"           # Structured error handling
tokio = { version = "1.0", features = ["full"] }  # Async runtime

