[package]
name = "verus_express"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "verus_express_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
hex = "0.4"
sha2 = "0.10"
blake2b_simd = "1.0"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-stronghold = "2"  # IOTA Stronghold for secure key storage
iota_stronghold = "2"          # IOTA Stronghold vault API (snapshot, client, store)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bip39 = "2.0"               # BIP39 mnemonic phrase generation
rand = "0.8"                # Cryptographically secure random number generation
hex = "0.4"                 # Hex encoding/decoding
bitcoin = "0.31"            # Bitcoin key derivation
k256 = "0.13"               # Ethereum secp256k1 cryptography
secp256k1 = { version = "0.29", features = ["rand"] }  # secp256k1 for Verus key derivation
tiny-keccak = { version = "2.0", features = ["keccak"] }  # Keccak256 for ETH addresses
ripemd = "0.1"              # RIPEMD160 for hash160
bs58 = { version = "0.5", features = ["check"] }  # Base58 encoding with checksum
zeroize = { version = "1.6", features = ["derive"] }  # Secure memory clearing
sha2 = "0.10"               # SHA-256 hashing for passwords
thiserror = "1.0"           # Structured error handling
tokio = { version = "1.0", features = ["full"] }  # Async runtime
tokio-util = "0.7"  # CancellationToken for update engine (Module 7)
uuid = { version = "1.11", features = ["v4", "serde"] }  # UUID generation for account IDs
async-trait = "0.1"  # Async trait for WalletChannel (Module 4)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }  # VRPC HTTP JSON-RPC (Module 5)
blake2b_simd = "1.0"
ethers = { version = "2.0", default-features = false, features = ["rustls"] }  # ETH/ERC20 channel support
dotenvy = "0.15"
base64 = "0.22"
zcash_client_backend = { version = "0.21.0", default-features = false, features = ["lightwalletd-tonic-transport", "lightwalletd-tonic-tls-webpki-roots", "unstable", "sync"] }
zcash_protocol = { version = "0.7.2", default-features = false }
zcash_primitives = { version = "0.26.4", features = ["non-standard-fees"] }
zcash_transparent = "0.6.3"
sapling = { package = "sapling-crypto", version = "0.5.0" }
jubjub = "0.10"
zip32 = { version = "0.2", default-features = false }
tonic = { version = "0.14.5", default-features = false, features = ["transport", "tls-webpki-roots"] }
